--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -2,4 +2,8 @@
   display: grid;
   position: absolute;
   inset: 0;
+
+  > router-outlet {
+    position: absolute; // out of document flow
+  }
 }
